--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Word Association Game</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <div class="app">
-      <div class="question-area">
-        <h1>Word Association Game</h1>
-        <h3>Your score is <span id="score-display"></span></h3>
-        <div class="question-container" id="question-container"></div>
-      </div>
-    </div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Word Association Game</title>
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+        <div class="app">
+            <div class="question-area">
+                <h1>Word Association Game</h1>
+                <h3>Your score is <span id="score-display"></span></h3>
+                <div class="question-container" id="question-container"></div>
+            </div>
+        </div>
 
-    <script src="app.js"></script>
-  </body>
+        <script type="module" src="app.js"></script>
+    </body>
 </html>
